# ImageMRF

./: .gitignore  CMakeLists.txt  LICENSE
include/: utility.h
src/: main.cpp  utility.cpp
